--- a/jackcess/jackcess-net.csproj
+++ b/jackcess/jackcess-net.csproj
@@ -8,7 +8,7 @@
     <Company>Health Market Science, Inc.</Company>
     <Description>Port of version 1.2.5 of the Java Jackcess library (https://jackcess.sourceforge.io/)</Description>
     <PackageProjectUrl>https://github.com/seud0nym/jackcess-net</PackageProjectUrl>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <RepositoryUrl>https://github.com/seud0nym/jackcess-net</RepositoryUrl>
     <PackageReleaseNotes>Ported using the Sharpen Eclipse plugin and extending the Sharpen C# uililty classes from the ngit project (https://github.com/mono/ngit). 
 Based on the blog post by Paul Du Bois: https://pauldb-blog.tumblr.com/post/14916717048/a-guide-to-sharpen-a-great-tool-for-converting</PackageReleaseNotes>
