--- a/sharpen.unix/Sharpen.Unix.csproj
+++ b/sharpen.unix/Sharpen.Unix.csproj
@@ -6,7 +6,7 @@
     <Authors>ngit</Authors>
     <Company />
     <Product>ngit</Product>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <Version>1.0.0.1</Version>
   </PropertyGroup>
 
