--- a/sharpen/Sharpen.csproj
+++ b/sharpen/Sharpen.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <Authors>ngit</Authors>
     <Product>ngit</Product>
     <Version>1.0.0.1</Version>
