--- a/jackcess/jackcess-net.csproj
+++ b/jackcess/jackcess-net.csproj
@@ -1,18 +1,21 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.2.5.3</Version>
+    <Version>1.2.5.4</Version>
     <Copyright>Copyright (c) 2008 Health Market Science, Inc.</Copyright>
     <Authors>Original: Health Market Science, Inc. Ported from Java by seud0nym</Authors>
     <Company>Health Market Science, Inc.</Company>
     <Description>Port of version 1.2.5 of the Java Jackcess library (https://jackcess.sourceforge.io/)</Description>
     <PackageProjectUrl>https://github.com/seud0nym/jackcess-net</PackageProjectUrl>
-    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <RepositoryUrl>https://github.com/seud0nym/jackcess-net</RepositoryUrl>
-    <PackageReleaseNotes>Ported using the Sharpen Eclipse plugin and extending the Sharpen C# uililty classes from the ngit project (https://github.com/mono/ngit). 
-Based on the blog post by Paul Du Bois: https://pauldb-blog.tumblr.com/post/14916717048/a-guide-to-sharpen-a-great-tool-for-converting</PackageReleaseNotes>
+    <PackageReleaseNotes>Ported using Eclipse Indigo, the Sharpen Eclipse plugin and by extending the Sharpen C# uililty classes from the ngit project (https://github.com/mono/ngit).
+Based on the blog post by Paul Du Bois: https://pauldb-blog.tumblr.com/post/14916717048/a-guide-to-sharpen-a-great-tool-for-converting
+</PackageReleaseNotes>
     <PackageLicenseExpression>LGPL-2.1-only</PackageLicenseExpression>
+    <TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);CopyProjectReferencesToPackage</TargetsForTfmSpecificBuildOutput>
+    <AssemblyVersion>1.2.5.4</AssemblyVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -23,17 +26,6 @@ Based on the blog post by Paul Du Bois: https://pauldb-blog.tumblr.com/post/1491
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
-
-  <ItemGroup>
-    <None Remove="src\empty.mdb" />
-    <None Remove="src\empty2003.mdb" />
-    <None Remove="src\empty2007.accdb" />
-    <None Remove="src\empty2010.accdb" />
-    <None Remove="src\index_codes_ext_gen.txt" />
-    <None Remove="src\index_codes_ext_genleg.txt" />
-    <None Remove="src\index_codes_gen.txt" />
-    <None Remove="src\index_codes_genleg.txt" />
-  </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="Resources\empty.mdb" />
@@ -47,7 +39,24 @@ Based on the blog post by Paul Du Bois: https://pauldb-blog.tumblr.com/post/1491
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\sharpen\Sharpen.csproj" />
+    <PackageReference Include="Portable.BouncyCastle" Version="1.8.6.7" />
+    <PackageReference Include="SharpZipLib.NETStandard" Version="1.0.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\sharpen\Sharpen.csproj">
+      <ReferenceOutputAssembly>true</ReferenceOutputAssembly>
+      <IncludeAssets>Sharpen.dll</IncludeAssets>
+    </ProjectReference>
+    <ProjectReference Include="..\sharpen.unix\Sharpen.Unix.csproj">
+      <ReferenceOutputAssembly>true</ReferenceOutputAssembly>
+      <IncludeAssets>Sharpen.Unix.dll</IncludeAssets>
+    </ProjectReference>
+  </ItemGroup>
+
+  <Target DependsOnTargets="ResolveReferences" Name="CopyProjectReferencesToPackage">
+    <ItemGroup>
+      <BuildOutputInPackage Include="@(ReferenceCopyLocalPaths->WithMetadataValue('ReferenceSourceTarget', 'ProjectReference'))"/>
+    </ItemGroup>
+  </Target>
 </Project>
